--- a/style.css
+++ b/style.css
@@ -1,41 +1,50 @@
 @import url(https://fr.allfont.net/allfont.css?fonts=bullpen-3d);
-html,
+
 body {
     margin: 0;
     padding: 0;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    background: whitesmoke;
 }
 
+/***********************      HEADER           ************************/
 .container {
     margin: 0;
     padding: 0;
 }
+ .m-left {
+ float: left;
+}
+                
+ .m-right {
+float: right;
+ }
 
-#header_nav {
+ header {
+     position: absolute;
+     z-index: 1000;
+     margin: 0;
+     padding: 0;
+     width: 100%;
+ }
+
+.topbar {
     height: 140px;
     line-height: 100px;
     background: rgba(0, 0, 0, 0.808)
 }
 
-header {
-    position: absolute;
-    z-index: 1000;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
 
-.m-left {
-    float: left;
-}
-
-.m-right {
-    float: right;
-}
-
-.logo {
+.topbar-logo {
     font-family: 'Bullpen 3D', arial;
     color: yellow;
     font-size: 50px;
+    line-height: 120px;
+}
+
+nav ul li {
+    display: inline-block;
 }
 
 #accueil {
@@ -86,6 +95,112 @@ header {
     height: 500px;
 }
 
+
+/******************************    BODY     **********************************/
+
+.body {
+    width: 90%;
+    margin: 50px auto;
+}
+#row_cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+  }
+.card {
+    width: 20%;
+    background: #fff;
+    border: 1px solid #ccc;
+    margin-bottom: 50px;
+    transition: 0.3s;
+  }
+
+.card-header {
+    text-align: center;
+    padding: 50px 10px;
+    background: black;
+    color: #fff;
+}
+  
+.card-body {
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 18px;
+}
+  
+.card-body .btn {
+    display: block;
+    color: rgb(0, 207, 18);
+    text-align: center;
+    background: black;
+    margin-top: 30px;
+    text-decoration: none;
+    padding: 10px 5px;
+}
+
+.card-body .btn:hover {
+    box-shadow: 0 0 40px -10px rgb(0, 207, 18);
+}
+
+.card:hover {
+    transform: scale(1.3);
+    box-shadow: 0 0 40px -10px rgb(0, 207, 18);
+}
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/********************         FOOTER               **********************/
 #footer {
     height: 300px;
     background: rgba(0, 0, 0, 0.808)
@@ -159,6 +274,3 @@ a:hover {
     position: relative;
 }
 
-nav ul li {
-    display: inline-block;
-}
